# Analemma-GVM

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.agent  LICENSE  README.md  audit.toml  demo.cast  deny.toml  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml  fuzz.yml  nightly-stress.yml  release.yml
benches/: pipeline.rs
config/: proxy.production.toml.example  proxy.toml  secrets.production.toml.example  secrets.toml  secrets.toml.example  srr_network.toml  stress-srr.toml
config/policies/: global.toml
crates/gvm-cli/: Cargo.toml
crates/gvm-cli/src/: anchor.rs  approve.rs  audit.rs  check.rs  demo.rs  dns_inspect.rs  events.rs  fs_approve.rs  import.rs  init.rs  main.rs  pipeline.rs  preflight.rs  proof.rs  proxy_manager.rs  reload.rs  replay.rs  run.rs  sandbox_inspect.rs  stats.rs  status.rs  suggest.rs  ui.rs  watch.rs
crates/gvm-cli/src/tui/: mod.rs  trace.rs  ui.rs
crates/gvm-cli/tests/: cli_integration.rs  import_openapi.rs
crates/gvm-engine/: Cargo.toml
crates/gvm-sandbox/: Cargo.toml
crates/gvm-sandbox/bpf/: gvm_tc_filter.bpf.c
crates/gvm-sandbox/src/: ca.rs  capability.rs  cgroup.rs  cgroup_parse.rs  cleanup_verify.rs  ebpf.rs  filesystem.rs  heartbeat.rs  lib.rs  mount.rs  namespace.rs  network.rs  sandbox_impl.rs  seccomp.rs  seccomp_audit.rs  syscall_names.rs  tc_filter.rs  tls_probe.rs  tools.rs
crates/gvm-sandbox/tests/: per_sandbox_ca_isolation.rs  security.rs  veth_slot_collision.rs
crates/gvm-types/: Cargo.toml
data/: gvm_engine.wasm
docs/: 00-overview.md  01-operations.md  02-policy.md  03-srr.md  04-ledger.md  05-vault.md  06-proxy.md  07-sdk.md  08-memory-security.md  09-test-report.md  10-architecture-changes.md  10-competitive-analysis.md  11-competitive-analysis.md  11-security-model.md  12-quickstart.md  12-security-model.md  13-reference.md  13-roadmap.md  14-governance-coverage.md  14-implementation-log.md  14-quickstart.md  15-quickstart.md  15-reference.md  15-user-guide.md  16-reference.md  17-governance-coverage.md  CHANGELOG.md  GVM_CODE_STANDARDS.md  comparison-opa-envoy.md  cooperative-intent.md  governance-coverage.md  linux-e2e-test.md  operations.md  overview.md  policy.md  quickstart.md  reference.md  security-layers.md  security-model.md  srr.md  (+2 more)
docs/architecture/: ledger.md  memory-security.md  proxy.md  sdk.md  vault.md
docs/assets/: gvm-demo.cast
docs/internal/: AUDIT_PREP.md  CHANGELOG.md  COVERAGE_HARDENING_PLAN.md  GVM_CODE_STANDARDS.md  PENTEST_REGRESSION_MAP.md  SECURITY_REVIEW.md  comparison-opa-envoy.md  linux-e2e-test.md
examples/agents/: data_exfil_agent.py  devops_agent.py  email_assistant.py  finance_agent.py
fuzz/: Cargo.toml
fuzz/dictionaries/: http.dict  srr.dict  wal.dict
fuzz/fuzz_targets/: fuzz_credential_inject.rs  fuzz_dns_parse.rs  fuzz_http_parse.rs  fuzz_jwt_auth.rs  fuzz_llm_trace.rs  fuzz_path_normalize.rs  fuzz_policy_eval.rs  fuzz_srr.rs  fuzz_vault_crypto.rs  fuzz_wal_parse.rs
fuzz/src/: lib.rs  types.rs
packaging/systemd/: README.md  gvm-cleanup.service  gvm-sandbox@.service
results/stress-win-20260329T162648/: metrics.csv
scripts/: bench-overhead.sh  bench-tail-report.py  dns-bypass-pentest.sh  docker-bridge-smoke.sh  docker-contained-e2e.sh  dual-agent-srr-e2e.sh  ec2-e2e-test.sh  ec2-setup.sh  framework-e2e.sh  ghost-stress-test.sh  mitm-pentest.sh  mock-github.py  multi-agent-load.sh  prod-stress-test.sh  record_demo.py  sandbox-escape-extended.sh  sandbox-observability-test.sh  srr-comprehensive.toml  srr-evasion-pentest.sh  stress-test.ps1  stress-test.sh  watch-discovery.sh
scripts/comparison/: README.md  bench.sh  envoy-extauthz.yaml  envoy-tls.yaml  envoy-wasm.yaml  gen-tls-certs.sh  hash-chain-sidecar.py  policy.rego  setup.sh  srr-bench.toml
scripts/ghost-stress-tools/: api_connectivity_check.py  disk_health_monitor.py  env_integrity_check.py  network_latency_test.py  system_capability_audit.py
scripts/stress-workloads/: agent-1-github-read.txt  agent-2-exfiltration.txt  agent-2-public-apis.txt  agent-3-messaging.txt  agent-3-tech-research.txt  agent-4-docs-reader.txt  agent-5-unknown-hosts.txt  openclaw-exfil.sh  openclaw-explore.sh  (+7 more)
sdk/python/: pyproject.toml
sdk/python/examples/: finance_agent.py  saas_agent.py  standalone_agent.py
sdk/python/gvm/: __init__.py  agent.py  checkpoint.py  decorator.py  demo.py  domain_agents.py  errors.py  hostile_demo.py  langchain_demo.py  langchain_tools.py  llm_demo.py  llm_runner.py  mock_demo.py  mock_server.py  resource.py  rollback_demo.py  session.py  state.py  unified_demo.py
src/: api.rs  api_keys.rs  auth.rs  checkpoint.rs  config.rs  dashboard.html  dns_governance.rs  enforcement.rs  intent_store.rs  ledger.rs  lib.rs  llm_trace.rs  main.rs  merkle.rs  operation.rs  policy.rs  proof.rs  proxy.rs  rate_limiter.rs  registry.rs  sign.rs  srr.rs  tls_proxy.rs  tls_proxy_hyper.rs  token_budget.rs  types.rs  upstream_pool.rs  vault.rs  wal_background_reverify.rs  wasm_engine.rs
tests/: admin_port_loopback_only.rs  adversarial_infra.rs  adversarial_v2_coverage.rs  anchor_chain_audit.rs  anchor_chain_recovery.rs  anchor_signing.rs  anchor_wiring.rs  api_handlers.rs  boundary.rs  budget_precision.rs  checkpoint_aggregator.rs  checkpoint_per_step.rs  checkpoint_persistence.rs  common_sanity.rs  cooperative_intent_lease.rs  cooperative_intent_lease_identity.rs  cooperative_intent_lease_lifecycle.rs  cooperative_intent_lease_p1.rs  cooperative_intent_lease_p2.rs  cooperative_intent_lease_phase2.rs  cooperative_intent_lease_phase3.rs  cooperative_intent_lease_phase3b.rs  cooperative_intent_lease_phase3c.rs  cross_rotation_recovery.rs  descriptor_e2e.rs  descriptor_migration.rs  dns_governance_adversarial.rs  edge_cases.rs  enforcement.rs  enforcement_robustness.rs  events_stream.rs  graphql_alias_direct_match.rs  graphql_alias_phase2_fp_reduction.rs  graphql_alias_url_deny_interaction.rs  hostile.rs  hot_reload_concurrency.rs  ic3_bypass_adversarial.rs  ic3_concurrency.rs  integration.rs  integrity_anchor_binding.rs  (+27 more)
(+55 files in other folders)
