[workspace]
members = [".", "crates/gvm-types", "crates/gvm-cli", "crates/gvm-engine"]
resolver = "2"

[package]
name = "gvm-proxy"
version = "0.1.0"
edition = "2021"
description = "Analemma Governance Virtual Machine — AI agent enforcement proxy"
license = "Apache-2.0"
repository = "https://github.com/skwuwu/Analemma-GVM"

[dependencies]
gvm-types = { path = "crates/gvm-types" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["limit", "util"] }
tower-http = { version = "0.5", features = ["trace", "limit", "catch-panic"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
anyhow = "1"
thiserror = "1"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
wasmtime = "29"
gvm-engine = { path = "crates/gvm-engine" }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "pipeline"
harness = false
