[workspace]
members = [".", "crates/gvm-types", "crates/gvm-cli", "crates/gvm-engine", "crates/gvm-sandbox"]
exclude = ["fuzz"]
resolver = "2"

[package]
name = "gvm-proxy"
version = "0.4.1"
edition = "2021"
description = "Analemma Governance Virtual Machine — AI agent enforcement proxy"
license = "Apache-2.0"
repository = "https://github.com/skwuwu/Analemma-GVM"

# cargo-binstall: download pre-built binaries instead of compiling from source.
# Install cargo-binstall: cargo install cargo-binstall
# Then: cargo binstall gvm-proxy
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gvm-v{ version }-{ target }{ archive-suffix }"
bin-dir = "gvm-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
gvm-types = { path = "crates/gvm-types" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["limit", "util"] }
tower-http = { version = "0.5", features = ["trace", "limit", "catch-panic"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
async-stream = "0.3"
futures-util = "0.3"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
anyhow = "1"
thiserror = "1"
hex = "0.4"
dashmap = "6"
zeroize = { version = "1", features = ["derive"] }
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }
gvm-engine = { path = "crates/gvm-engine", optional = true }
gvm-sandbox = { path = "crates/gvm-sandbox" }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
httparse = "1"
moka = { version = "0.12", features = ["sync"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
time = "0.3"

[features]
default = []
# Wasm policy engine: loads governance logic from a .wasm module for memory-isolated
# evaluation. Disabled by default — native Rust evaluation is used instead.
# Enable with: cargo build --features wasm
#
# Design rationale: Wasm isolation is intended for a future scenario where third-party
# policy modules (e.g., policy marketplace) need to be loaded without trusting the code.
# Current GVM policies are TOML-declarative and written by the operator, so Wasm isolation
# adds no practical security benefit today. Keeping it behind a feature flag removes
# ~10MB from the binary and eliminates 5 wasmtime CVEs from the default attack surface.
# When demand for pluggable policy modules is confirmed, this feature will be completed.
wasm = ["wasmtime", "wasmtime-wasi", "gvm-engine"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[[bench]]
name = "pipeline"
harness = false
