[package]
name = "gvm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Stop cargo's manifest walk-up at this directory.
#
# The root Cargo.toml has `workspace.exclude = ["fuzz"]`, which is the
# intended setup — fuzz targets must NOT be members of the main workspace
# because cargo-fuzz adds sanitizer / coverage RUSTFLAGS that would
# contaminate the rest of the build. But cargo's discovery still walks
# upward from `fuzz/Cargo.toml`, finds the root manifest, sees fuzz isn't
# in `members`, and bails with:
#
#   error: current package believes it's in a workspace when it's not:
#   current:   .../fuzz/Cargo.toml
#   workspace: .../Cargo.toml
#
# An empty `[workspace]` table here marks fuzz as its own
# (single-package) workspace, terminating the walk-up. This is the
# pattern documented in the cargo-fuzz README and used by every
# cargo-fuzz project. The CI fuzz job hit this exact error on every
# target after the workspace exclude was added.
[workspace]

[package.metadata]
cargo-fuzz = true

[lib]
name = "gvm_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
httparse = "1"
axum = "0.7"
gvm-proxy = { path = ".." }
gvm-types = { path = "../crates/gvm-types" }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "io-util", "time", "macros"] }

# SRR rule matching fuzzer: exercises regex compilation + pattern matching
[[bin]]
name = "fuzz_srr"
path = "fuzz_targets/fuzz_srr.rs"
doc = false

# WAL JSON parsing fuzzer: exercises event deserialization
[[bin]]
name = "fuzz_wal_parse"
path = "fuzz_targets/fuzz_wal_parse.rs"
doc = false

# MITM HTTP request parser fuzzer: exercises header parsing, CL/TE validation, body handling
[[bin]]
name = "fuzz_http_parse"
path = "fuzz_targets/fuzz_http_parse.rs"
doc = false

# SRR path normalization fuzzer: percent-decode, null-strip, dot-segment, double-slash
[[bin]]
name = "fuzz_path_normalize"
path = "fuzz_targets/fuzz_path_normalize.rs"
doc = false

# LLM thinking trace extraction fuzzer: JSON + SSE parsing for all providers
[[bin]]
name = "fuzz_llm_trace"
path = "fuzz_targets/fuzz_llm_trace.rs"
doc = false

# DNS packet parser fuzzer: raw UDP packets → domain extraction
[[bin]]
name = "fuzz_dns_parse"
path = "fuzz_targets/fuzz_dns_parse.rs"
doc = false

# Vault AES-256-GCM encrypt/decrypt round-trip + corruption
[[bin]]
name = "fuzz_vault_crypto"
path = "fuzz_targets/fuzz_vault_crypto.rs"
doc = false

# JWT authentication token verification
[[bin]]
name = "fuzz_jwt_auth"
path = "fuzz_targets/fuzz_jwt_auth.rs"
doc = false

# Credential injection + agent header stripping
[[bin]]
name = "fuzz_credential_inject"
path = "fuzz_targets/fuzz_credential_inject.rs"
doc = false
