[package]
name = "gvm-cli"
version = "0.4.0"
edition = "2021"
description = "CLI tool for the Analemma Governance Virtual Machine"
license = "Apache-2.0"
repository = "https://github.com/skwuwu/Analemma-GVM"

# cargo-binstall: download pre-built binaries instead of compiling from source.
# Install cargo-binstall: cargo install cargo-binstall
# Then: cargo binstall gvm-cli
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gvm-v{ version }-{ target }{ archive-suffix }"
bin-dir = "gvm-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "gvm"
path = "src/main.rs"

[dependencies]
gvm-types = { path = "../gvm-types" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
gvm-sandbox = { path = "../gvm-sandbox" }
url = "2"
which = "7"
tempfile = "3"
glob = "0.3"
libc = "0.2"
