[package]
name = "gvm-cli"
version = "0.6.1"
edition = "2021"
description = "CLI tool for the Analemma Governance Virtual Machine"
license = "Apache-2.0"
repository = "https://github.com/skwuwu/Analemma-GVM"

# cargo-binstall: download pre-built binaries instead of compiling from source.
# Install cargo-binstall: cargo install cargo-binstall
# Then: cargo binstall gvm-cli
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gvm-v{ version }-{ target }{ archive-suffix }"
bin-dir = "gvm-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "gvm"
path = "src/main.rs"

[features]
default = []
# `--contained` (Docker-isolation mode). EXPERIMENTAL — the Docker
# isolation primitives (read-only FS, no-new-privileges, NET_ADMIN
# drop, resource limits) work, but the in-container DNAT to MITM,
# CA injection, and HTTPS_PROXY env handling are not yet wired.
# Today's contained mode relies on the host-side iptables egress
# lock for governance, NOT on transparent in-container HTTPS
# inspection.
#
# Off by default so the production binary surface does not advertise
# a flag whose semantics are still being finalised. Builds that need
# Docker isolation pass `--features contained`. For full HTTPS L7
# inspection on Linux, use `--sandbox` instead — production-ready.
contained = []

[dependencies]
gvm-types = { path = "../gvm-types" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# Used by `gvm run --interactive [t]` for IANA timezone validation.
chrono-tz = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
sha2 = "0.10"
hex = "0.4"
gvm-sandbox = { path = "../gvm-sandbox" }
# Used only by `gvm replay` (gvm_proxy::srr::NetworkSRR) for offline
# rule re-classification. Heavy dep — accept the binary-size cost
# rather than splitting SRR into its own crate, since most operators
# install gvm-cli + gvm-proxy together anyway.
gvm-proxy = { path = "../.." }
url = "2"
which = "7"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
libc = "0.2"
ratatui = "0.30"
crossterm = "0.29"
# Used only by `gvm anchor keygen` for Ed25519 keypair generation.
# Same crate the proxy already depends on (transitively via gvm-proxy
# anchor verification path), so this doesn't grow the dep tree.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# OpenAPI spec import (`gvm import openapi <spec.yaml>`).
# serde_yaml's parser accepts JSON as a subset of YAML, so the same
# importer handles both file formats.
serde_yaml = "0.9"

[dev-dependencies]
# `tempfile` is only used by `replay::tests::srr_from_inline` — keeping
# it here drops `fastrand`, `rustix`, and `linux-raw-sys` from the
# release dependency graph.
tempfile = "3"
