[package]
name = "gvm-sandbox"
version = "0.1.0"
edition = "2021"
description = "Linux-native agent sandboxing — namespace, seccomp-BPF, and network isolation"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "signal", "user", "process", "fs", "env", "net", "socket"] }
seccompiler = { version = "0.4", features = ["json"] }
libc = "0.2"
