[package]
name = "gvm-sandbox"
version = "0.5.0"
edition = "2021"
description = "Linux-native agent sandboxing — namespace, seccomp-BPF, and network isolation"
license = "Apache-2.0"

[features]
default = []

[dependencies]
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = "0.13"
zeroize = { version = "1", features = ["derive"] }
time = "0.3"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "signal", "user", "process", "fs", "env", "net", "socket"] }
seccompiler = { version = "0.4", features = ["json"] }
libc = "0.2"
glob = "0.3"
procfs = { version = "0.16", default-features = false }

[dev-dependencies]
tempfile = "3"
