[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gvm-sdk"
version = "0.1.0"
description = "Python SDK for the Analemma Governance Virtual Machine"
readme = "../../README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["gvm"]
